fix: address bugs from code review + optimize 58 files
Bug fixes:
- Fix BattleController.proceedToClash() delegating to wrong method
- Fix CosmiconStats.isPrismaticFeatureUnlocked() defaulting to true (dead unlock guards)
- Fix stale MemoryAPI cache in CosmiconEventState/Stats/PlayerState after save reload
- Fix PrismaticState uses=2 immediately overwritten to 0

Optimizations (58 files):
- Eliminate per-frame allocations in render paths (batched GL_QUADS, UnifiedCoord reuse, sprite caching, scratch buffers)
- Cache unmodifiable collection wrappers in CharacterCard, PrismaticDiceRegistry, EffectState, CosmiconLoungeProvider
- Replace autoboxing patterns (stream().boxed() to manual loop, int[] over HashMap)
- Remove dead code, redundant copies, and duplicate logic
- Fix PrismaticDiceProcessor if-chain to switch expression
- Consolidate duplicate logic across DiceSpriteRegistry, BattleController, HpManager, PrismaticState, CyreneAI